# plutus-nft

./: .gitignore  README.md  cabal.project  hie.yaml  plutus-explorie-nft.cabal
.devcontainer/: devcontainer.json
mintTokens/: .nix-shell-cabal.project  CHANGELOG.md  cabal.project  explorie-mint-tokens.cabal.bak  mintTokens.cabal
mintTokens/app/: explorie-nft copy.hs  explorie-nft.hs  explorie-tokens.hs
mintTokens/plutus-scripts/: mint-exp-tokens.plutus  mint-nft-policy.plutus  mint-nft.plutus
mintTokens/scripts/: 00_deploy.sh  01_mint.sh  populateNFTs.txt
mintTokens/scripts/metadata/: metadata_McDonaldsNFT.json
mintTokens/src/Explorie/: MintNFT.hs
mintTokens/src/Explorie/Minting/: MintNFT.hs  MintTokens.hs
old-plutus-nft/scripts/: mint_nft.sh  nft-mint-policy.plutus  nft-tx-body.01  nft-tx.01
pab/: Main.hs
src/Cardano/Plutus/: Nft.hs
txs/: metadata_template.json  tx.build  tx.signed
utilScripts/: .exp  00_createWallet.sh  01_checkWallet.sh  02_getUtxo.sh  03_makeTransaction.sh  04_createDatumHash.sh  05_createScript.sh  06_lockFundsInScript.sh  07_unlockFunds.sh  08_mintAssetsWithPlutusScript.sh  09_createPolicyScript.sh  0_getProtocol.sh  README.md
utilScripts/ExpPolicy/: EXP_POLICY_ID.txt  exp-policy.script  exp-policy.skey  exp-policy.vkey
utilScripts/MaryEra/: 00_createPolicy.sh  01_mint.sh  02_createPolicyKHS.sh  03_mintNFT.sh  metadata.txt  mtx.raw  mtx.signed  shelley-policy1.script  shelley-policy1.skey  shelley-policy1.vkey
wallets/: explorieMain.addr  explorieMain.pkh  explorieMain.skey  explorieMain.vkey  explorieSecondary.addr  explorieSecondary.skey  explorieSecondary.vkey
