cabal-version:      2.4
name:               mintTokens
version:            0.1.0.0
description:        Explorie token creation
author:             Edwin Tuzar
maintainer:         tuzaredwin@gmail.com
license:            Apache-2.0
license-files:      LICENSE
                    NOTICE
build-type:         Simple
extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Explorie.Minting.MintTokens,
      Explorie.Minting.MintNFT
    build-depends:
      base >= 4.9 && < 5,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      cardano-api,
      plutus-core,
      plutus-ledger-api,
      serialise
    hs-source-dirs: src

executable explorie-tokens
  import:               lang
  hs-source-dirs:       app
  main-is:              explorie-tokens.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        base >= 4.9 && < 5,
                        cardano-api -any,
                        bytestring -any,
                        data-default -any,
                        plutus-contract -any,
                        plutus-pab -any,
                        freer-simple -any,
                        prettyprinter -any,
                        freer-extras -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        mintTokens

executable explorie-nft
  import:               lang
  hs-source-dirs:       app
  main-is:              explorie-nft.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        base >= 4.9 && < 5,
                        cardano-api -any,
                        bytestring -any,
                        data-default -any,
                        plutus-contract -any,
                        plutus-pab -any,
                        freer-simple -any,
                        prettyprinter -any,
                        freer-extras -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        mintTokens